<resources>
    <string name="app_name">Dsastre Games</string>
    <string name="game1">2048</string>
    <string name="game2">PEG SOLITAIRE</string>
    <string name="menu_item_help">Help</string>
    <string name="menu">MAIN MENU</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_play">Play</string>
    <string name="menu_item_scores">View Scores</string>
    <string name="app_logo_top">ARE YOU READY?</string>
    <string name="app_logo_bottom"> GO!</string>
    <string name="app_version_info">Version 1.0.0\nCopyright © 2021 David Sastre\nAll
        Rights Reserved.</string>
    <string name="menu_juego_2048">2048</string>
    <string name="menu_juego_peg">PEG SOLITAIRE</string>
    <string name="menu_juego_tictactoe">TIC TAC TOE</string>
    <string name="score">0</string>
    <string name="best">0</string>
    <string name="txt_score">Score</string>
    <string name="high_score">High Score</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">Register</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Full Name</string>
    <string name="empty_not_saved">Please enter a Username</string>
    <string name="user_used">User already registered</string>
    <string name="modify_data">MODIFY DATA</string>
    <string name="user_placeholder">User</string>
    <string name="timeDetail">Time</string>
    <string name="score_placeholder">Score</string>
    <string name="logout">logout</string>
    <string name="change_password">CHANGE PASSWORD</string>
</resources>