<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scoreImageDetail"
        android:adjustViewBounds="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/scoreImageDetail"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:id="@+id/userDetail"
        android:text="@string/user_placeholder"
        android:padding="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreImageDetail"
        android:textColor="?android:textColorSecondary"
        android:id="@+id/timeDetail"
        android:text="@string/timeDetail"
        android:padding="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scoreDetail"
        android:layout_below="@+id/timeDetail"
        android:text="@string/score_placeholder"
        android:padding="8dp" />

</RelativeLayout>